# slep

./: .build.sh.swp  .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh
.github/workflows/: app_builder.yml
core/: Cargo.toml  build.rs
core/cargo_for_docker/: Cargo.toml  build.rs
core/migrations/: 20221127234445_init.sql  20221129181819_message.sql  20221129181842_office_automation.sql  20221130041040_user.sql
core/src/: axum_handler.rs  builder.rs  check.rs  collect.rs  constant.rs  dispatcher.rs  event.rs  main.rs  receiver.rs  resources.rs  rpc.rs  services.rs  storage.rs  user.rs
core/src/resources/: group.rs  member.rs  message.rs  office_automation_task.rs  profile_picture.rs  read_status.rs  reviewer.rs  stream_level.rs  stream_settings.rs  task_id.rs  task_receipt.rs  topic_level.rs  topic_settings.rs  user.rs  username.rs
core/src/rpc/: coder.rs
core/src/storage/: action.rs  group.rs  stream.rs  topic.rs  updater.rs
core/src/storage/action/: group.rs  member.rs  stream_settings.rs  topic_settings.rs
grpc-proto/: README.md  global_id.proto  hmessage_core.proto  hmessage_message.proto  hmessage_path.proto  hmessage_relation.proto  levitas.proto
grpc-proto/hchat/: hchat_group.proto  hchat_user.proto
json.core/: json.Core.rs
nextjs-frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
nextjs-frontend/docs/: slep-api&event.md  slep_client-sqlite-design.md
nextjs-frontend/src-tauri/: .gitignore  Cargo.toml  config.yaml  tauri.conf.json
nextjs-frontend/src-tauri/migrations/: 20221205201641_message.sql  20221206005046_office_automation.sql  20221206005909_user.sql
nextjs-frontend/src-tauri/src/: command.rs  constant.rs  init.rs  main.rs  notify.rs  report.rs  resources.rs  sqlite_operator.rs  system_tray.rs  topic.rs  websocket.rs
nextjs-frontend/src-tauri/src/command/: group.rs  member.rs  message.rs  office_automation_task.rs  read_status.rs  reviewer.rs  stream.rs  system.rs  task_receipt.rs  topic.rs  user.rs
nextjs-frontend/src-tauri/src/init/: message.rs  pull.rs  task.rs
nextjs-frontend/src-tauri/src/websocket/: stream.rs
nextjs-frontend/src/components/: AddGroupDialog.tsx  BottomControl.tsx  ComboboxBuilder.tsx  CreateStreamDialog.tsx  Layout.tsx  LoginLayout.tsx  MarkdownEditor.tsx  MarkdownViewer.tsx  MessageBuilder.tsx  MessageViewer.tsx  PrivateMesssagesPartBuilder.tsx  ReceiptDialog.tsx  RegisterDialog.tsx  StreamInfo.tsx  StreamRadioGroupBuilder.tsx  StreamsPartBuilder.tsx  TopRightOption.tsx  TopicInfo.tsx  TopicRadioGroupBuilder.tsx
nextjs-frontend/src/hooks/: useGetGroupByUid.ts  useGetGroupMemberList.ts  useGetPrivateChatList.ts  useGetStreamList.ts  useGetStreamMessage.ts  useGetTaskList.ts  useGetTaskListByConsignor.ts  useGetTopicList.ts  useGetTopicMessage.ts  useGetTopicSettings.ts  useGetUserInfo.ts
nextjs-frontend/src/pages/: _app.tsx  createGroup.tsx  index.tsx  loginByGroup.tsx
nextjs-frontend/src/pages/group/: index.tsx
nextjs-frontend/src/pages/login/: index.tsx
nextjs-frontend/src/pages/oa/: index.tsx
nextjs-frontend/src/styles/: globals.css  myStyles.module.scss
nextjs-frontend/src/utils/: createContext.ts  helper.ts
payload/: Cargo.toml  build.rs
payload/src/: error.rs  lib.rs  resources.rs  rpc.rs  snowflake_id.rs
payload/src/resources/: group.rs  member.rs  message.rs  office_automation_task.rs  profile_picture.rs  read_status.rs  reviewer.rs  stream.rs  stream_level.rs  task_id.rs  task_receipt.rs  topic.rs  topic_level.rs  user.rs  username.rs
payload/src/rpc/: client.rs
resource/: Cargo.toml
resource/resource_macros/src/: lib.rs
resource/src/: lib.rs
rfcs/: experience.md  slep-design.md  slep_client-design.md  slep_core-design.md  slep_core-rfc.md
