[package]
authors = ["qians <qiangezaici@outlook.com>"]
edition = "2021"
name = "slep-core"
version = "1.0.0"

[[bin]]
name = "slep-core"
path = "src/main.rs"

[dependencies]
payload = { path = "../payload" }
resource = { path = "../resource" }

anyhow = { version = "1" }
async-stream = "0.3"
once_cell = { version = "1.9.0", default-features = false }
serde = "1"
serde_derive = "1.0"
serde_json = "1"

bytes = { version = "1" }
chrono = "0.4"
random-string = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6.2", features = [
    "any",
    "json",
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
] }

# axum-server = {version = "0.4", features = ["tls-rustls"]}
axum = { version = "0.6", features = ["ws", "headers", "macros"] }
futures = "0.3"
futures-util = { version = "0.3" }
headers = "0.3"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.8"
tower-http = { version = "0.4", features = ["cors"] }

color-eyre = "0.6"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.8"
