[package]
edition = "2021"
name = "payload"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = {version = "1"}
chrono = "0.4"
instant = {version = "0.1", features = ["inaccurate"]}
once_cell = {version = "1.9.0", default-features = false}
prost = "0.11"
random-string = "1.0"
resource = {path = "../resource"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", features = [
  "sqlite",
  "postgres",
  "runtime-tokio-rustls",
]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tonic = "0.8"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.8"
