[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "quake-slep"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
resource = { path = "../../resource" }
payload = { path = "../../payload" }
anyhow = "1.0.66"
color-eyre = "0.6"
futures = "0.3.23"
instant = { version = "0.1", features = ["inaccurate"] }
log = "0.4"
once_cell = { version = "1.9.0", default-features = false }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [
  "sqlite",
  "postgres",
  "runtime-tokio-rustls",
] }
tauri = { version = "1.2", features = ["api-all", "devtools", "icon-png", "system-tray"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.17.2", features = ["__rustls-tls"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = "0.17.3"
url = "2.1.0"
window-shadows = "0.2.0"
serde_yaml = "0.9"
random-string = "1.0"
tauri-runtime = "0.12.1"
lazy_static = "1.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
